Sat Jul  6 19:59:27 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (argp_program_version): New variable.
	<hurd.h>: New include.
	
Mon Jul  1 12:55:48 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass2.c (pass2): Don't skip empty directories in `.' and `..'
 	correctness check; we don't clear them the way BSD does, so we
 	want `.' and `..'  to get created for us.  Also handle `.' before
 	`..' so that they get created in the usual order for empty
 	directories.

	* dir.c (makeentry): After successful directory expansion, write
 	out modified directory inode.

	* pass4.c (pass4): If a reconnect fails while we are preening,
 	give up.

Mon Jun 24 10:19:39 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* utilities.c (errexit, punt): Exit with status 8 for catastrophic
 	failures.

Thu May 23 14:12:21 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass2.c (pass2): Don't clear all node types in directories, just
 	clear those that are wrong.

Tue May 14 16:49:46 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pass2.c (pass2): Fix up test in preen case.

Tue May 14 15:29:36 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass2.c (pass2): Handle directory entry type fields better for
 	Hurd.

Sat May 11 01:07:49 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (parse_opt): Use ARGP_ERR_UNKNOWN instead of EINVAL.

Thu May  9 20:12:51 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pass1b.c (pass1b): Bother to initialize NUMBER.

Fri May  3 00:48:39 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (nice_size, show_stats): New functions.
	(main): Use show_stats.

Wed May  1 13:59:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Shorten summary message so that it fits on one line.
	* utilities.c (no_preen): New function.
	(problem, warning, pinode): Use it.
	(warning): Don't flush all pending problems, just our own.
	* dir.c (linkup): Consistently put quotes around filenames.
